# cypi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  customers.toml  packages.toml
k6/: README.md  smoke-test.js
src/: api.rs  auth.rs  background.rs  config.rs  lib.rs  main.rs
src/api/: auth.rs  index.rs
src/background/: customer_auth.rs  customers.rs  packages.rs
