[package]
name = "cypi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
html5ever = { version = "0.27.0" }
markup5ever_rcdom = { version = "0.3.0" }
reqwest = { version = "0.12.15", features = ["blocking", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.15", features = ["net", "rt", "sync"] }
toml = "0.8.22"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
