[package]
name = "cypi"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
axum = { version = "0.8" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
html5ever = { version = "0.27.0" }
markup5ever_rcdom = { version = "0.3.0" }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.15", features = ["blocking", "stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.15", features = ["net", "rt", "sync"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.22"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
